--- a/index.html
+++ b/index.html
@@ -34,10 +34,27 @@
     </header>
     <main>
         <section class="introdução">
-
+            
         </section>
         <article class="sobre-barbearia">
-
+            <div class="side-text">
+                <h1 class="capitulo">Sobre a Barbearia</h1>
+                <div class="text-box">
+                    <h2 class="topico">XXXXXXX</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores praesentium totam, recusandae alias magni odio quasi corporis doloremque nemo! Quisquam aspernatur ex asperiores mollitia nisi dolorum sapiente incidunt deserunt atque.</p>
+                    <h2 class="topico">XXXXXXX</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores praesentium totam, recusandae alias magni odio quasi corporis doloremque nemo! Quisquam aspernatur ex asperiores mollitia nisi dolorum sapiente incidunt deserunt atque.</p>
+                    <h2 class="topico">XXXXXXX</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores praesentium totam, recusandae alias magni odio quasi corporis doloremque nemo! Quisquam aspernatur ex asperiores mollitia nisi dolorum sapiente incidunt deserunt atque.</p>
+                    <h2 class="topico">XXXXXXX</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores praesentium totam, recusandae alias magni odio quasi corporis doloremque nemo! Quisquam aspernatur ex asperiores mollitia nisi dolorum sapiente incidunt deserunt atque.</p>
+                </div>
+            </div>
+            <div class="side-foto">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
         </article>
         <article class="sobre-jp">
 
