--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <main>
         <section class="introdução">
-            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem distinctio voluptatem excepturi, nisi consequatur rerum itaque quo cum libero esse magnam minus debitis doloribus ipsa illo? Id eos iure dignissimos.</p>
         </section>
         <article class="sobre-barbearia">
             <div class="side-text">
